Change some texts

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                     от 1000$ в инстаграм
                     уже сегодня
                 </h1>
+                <p class="home_paragraph" >3х месячная программа по заработку в социальных сетях и старту первого бизнеса
+                </p>
                 <a href="#forms" class="button">Записаться</a>
                 <a href="#tariffs" class="button-outline">Тарифы</a>
             </div>
@@ -124,9 +126,9 @@
                 </p>
             </div>
             <div class="programs__content">
-                <h3 class="programs__title">КУРС</h3>
+                <h3 class="programs__title">ГРУППОВАЯ ДИНАМИКА</h3>
                 <p class="programs__category">
-                    Длительность курса расчитана на от 2-х до 3,5 месяцев, исходя выбранного вами тарифа
+                    Ученики поделяться на группы, которые будут соревноваться в достижении результата. Лучшие ученики будут дополнительно поощеряться
                 </p>
             </div>
         </div>
@@ -145,7 +147,7 @@
                     <li>- Обучил 350 учеников</li>
                     <li>- Открутил более 50.000$ рекламного бюджета</li>
                     <li>- Купил себе Nexia 3 и Malibu в 18 лет</li>
-                    <li>- Зарабатывает на SMM от 10.000$ в месяц</li>
+                    <li>- Зарабатывает на SMM от 5.000$ в месяц</li>
                     <li>- Соучредитель Insight Academy</li>
                 </ul>
             </div>
