--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <div class="course__data">
                 <img src="assets/img/emoji-5.PNG" alt="photo" class="course__img">
                 <div class="course__block">
-                    <h3 class="course__title">Для тех кто хочет заработать свои первые деньги</h3>
+                    <h3 class="course__title">Для тех, кто хочет заработать свои первые деньги</h3>
                 </div>
             </div>
             <div class="course__data">
                 <img src="assets/img/emoji-4.PNG" alt="photo" class="course__img">
                 <div class="course__block">
-                    <h3 class="course__title">Для тех кто хочет запустить свой первый бизнес в онлайн</h3>
+                    <h3 class="course__title">Для тех, кто хочет запустить свой первый бизнес в онлайн</h3>
                 </div>
             </div>
             <div class="course__data">
                 <img src="assets/img/emoji-1.PNG" alt="photo" class="course__img">
                 <div class="course__block">
-                    <h3 class="course__title">Для того кто не хочет просидеть все лето без дела!</h3>
+                    <h3 class="course__title">Для тех, кто не хочет просидеть все лето без дела!</h3>
                 </div>
             </div>
         </div>
@@ -75,19 +75,19 @@
             <div class="course__data">
                 <img src="assets/img/emoji-3.PNG" alt="photo" class="course__img">
                 <div class="course__block">
-                    <h3 class="course__title">Для студентов которые хотят совмещать учебу и работу</h3>
+                    <h3 class="course__title">Для студентов, которые хотят совмещать учебу и работу</h3>
                 </div>
             </div>
             <div class="course__data">
                 <img src="assets/img/emoji-2.PNG" alt="photo" class="course__img">
                 <div class="course__block">
-                    <h3 class="course__title">Для тех кто не хочет зависить от родителей и стать самостоятельным</h3>
+                    <h3 class="course__title">Для тех, кто не хочет зависить от родителей и стать самостоятельным</h3>
                 </div>
             </div>
             <div class="course__data">
                 <img src="assets/img/emoji-6.PNG" alt="photo" class="course__img">
                 <div class="course__block">
-                    <h3 class="course__title">для тех кто хочет зарабатовать уделяя любимому делу всего 2 часа в день</h3>
+                    <h3 class="course__title">Для тех, кто хочет зарабатовать уделяя любимому делу всего 2 часа в день</h3>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             <div class="programs__content">
                 <h3 class="programs__title">КУРС</h3>
                 <p class="programs__category">
-                    Длительность курса расчитана на от 2-х до 3,5 месяцев, исходя выбранного вами тарифа
+                    Длительность курса расчитана от 2-х до 3,5 месяцев, исходя из выбранного вами тарифа
                 </p>
             </div>
             <div class="programs__content">
@@ -194,7 +194,7 @@
             <div class="speakers__content">
                 <p class="speakers__title">Мартыненко Юрий Петрович</p>
                 <ul class="speakers__description">
-                    <li>- Профессиольный спикер международного уровня с опытом более 20 лет</li>
+                    <li>- Профессиональный спикер международного уровня с опытом более 20 лет</li>
                     <li>- Вырастил с нуля более 5000 профессиольных продавцов и собственников бизнеса в 2х континентах и в 7ми странах</li>
                     <li>- В Узбекистане обучал и строил отделы продаж в таких компаниях как “Home market”, “Credit Asia”, “Hamkor bank”, “Etiqot mebel”, “Texno mart” и другие</li>
                 </ul>
