--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="programs__content">
                 <h3 class="programs__title">КУРС</h3>
                 <p class="programs__category">
-                    Длительность курса расчитана от 2-х до 3,5 месяцев, исходя из выбранного вами тарифа
+                    Длительность курса расчитана от 2-х до 3,5 месяцев, исходя, из выбранного вами тарифа
                 </p>
             </div>
             <div class="programs__content">
