--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         </div>
 
     <input type="hidden" name="fvv" value="1">
-    <input type="hidden" name="fbzx" value="-1343946981265990748">
+    <input type="number" name="fbzx" value="-1343946981265990748">
     <input type="hidden" name="pageHistory" value="0">
     <input class="btn btn-primary" type="submit" value="Отправить">
 </form>
