--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <ul>
                     <li>1.SMM</li>
                     <li>2.Выбор ниши и старт бизнеса</li>
-                    <li>3.Личный бренд/li>
+                    <li>3.Личный бренд</li>
                     <li>4.Сторисмейкинг</li>
                     <li>5.Продажи</li>
                 </ul>
